--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg p-0 color-navegacion ">
             <div class="container-fluid logo navegacion">
-                <a class="navbar-brand" href="#"><img src="./img/logo.jpg" height="40px" width="40px" alt=""></a>
+                <a class="navbar-brand" href="./index.html"><img src="./img/logo.jpg" height="40px" width="40px" alt=""></a>
                 <button class="navbar-toggler corazon-estilo " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
