--- a/catalogo.html
+++ b/catalogo.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg p-0 color-navegacion">
             <div class="container-fluid logo navegacion">
-                <a class="navbar-brand" href="#"><img src="./img/logo.jpg" height="40px" width="40px" alt=""></a>
+                <a class="navbar-brand" href="./index.html"><img src="./img/logo.jpg" height="40px" width="40px" alt=""></a>
                 <button class="navbar-toggler corazon-estilo " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon corazon-estilo"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-balloon-heart-fill" viewBox="0 0 16 16">
