--- a/catalogo.html
+++ b/catalogo.html
@@ -52,12 +52,12 @@
                 <!-- Aquí puedes agregar productos -->
             </div>
             <div class="boton-reset">
-                <button id="refresh-button" class="btn btn-primary mt-3">Actualizar Productos</button>
+                <button id="refresh-button" class="form-group  mt-3"><a href="./catalogo.html">Clic para mas Ramos</a> </button>
             </div>
             
         </div>
     </section>
-    <div class="mt-2 mb-2 text-center pie">
+    <div class="mt-0 mb-0 pb-4 text-center pie">
         <span>Copyright @2023 - Desarrollado por Agustin Narvaez</span>
         <a href="mailto:ncnrvz2001@gmail.com">  📝 <strong>Enviar un correo</strong>  </a>
         <a href="tel:+51 980934622"> 📞 <strong>LLamar por telefono</strong> </a>
